5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_2897.log
== TEST (2019-03-13 23:11:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input (1 , 2 , 3 , 4))

# Impressao do dobro do numero
print(2 , 4 , 6 , 8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(input (1 , 2 , 3 , 4))
TypeError: input expected at most 1 arguments, got 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:11:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input (1 , 2 , 3 , 4))

# Impressao do dobro do numero
print(2 , 4 , 6 , 8)
-- EXECUTION TIME:
0.205186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 4, in <module>
    num = int(input (1 , 2 , 3 , 4))
TypeError: input expected at most 1 arguments, got 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:13:54) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input( 1))

#2
print(2)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:13:56) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input( 1))

#2
print(2)
-- EXECUTION TIME:
0.188331
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:27:24) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(2)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:27:26) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(2)
-- EXECUTION TIME:
0.127012
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:27:33) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num,2)
-- OUTPUT:
1234 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:27:35) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num,2)
-- EXECUTION TIME:
0.169686
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234 2
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:27:43) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(nm,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nm,2)
NameError: name 'nm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:27:45) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(nm,2)
-- EXECUTION TIME:
0.129058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(nm,2)
NameError: name 'nm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:28:30) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:28:32) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num*2)
-- EXECUTION TIME:
0.185454
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:33:16) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:33:21) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:33:27) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num*2)
-- EXECUTION TIME:
0.192611
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:45:15) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:45:27) 
-- CODE:
#1 

# Leitura de valores de entrada e conversao para inteiro
num = int (input("Digite o numero:"))

#2
print(num*2)
-- EXECUTION TIME:
0.227381
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
